feat: 산책 기록 경로 제공

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.mp.strollapp.ui.weather.WeatherDetailActivity" />
-
+        <activity android:name=".ui.history.PathMapActivity" />
         <service
             android:name=".service.LocationForegroundService"
             android:enabled="true"
